--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "original-require": "^1.0.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "zeppelin-solidity": "^1.6.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
